[package]
name = "foxmarks"
version = "1.0.2"
authors = ["zefr0x"]
edition = "2021"
description = "A CLI read-only interface for firefox's bookmarks and history."
readme = "README.md"
homepage = "https://github.com/zefr0x/foxmarks"
repository = "https://github.com/zefr0x/foxmarks.git"
license = "GPL-3.0"
keywords = ["firefox", "bookmarks", "history", "cli"]
categories = ["command-line-utilities", "database-implementations"]
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
clap = { version = "4.3.11", features = ["string"]}
configparser = "3.0.2"
dirs = "5.0.1"
rusqlite = "0.29.0"
tempfile = "3.6.0"

[build-dependencies]
clap = { version = "4.3.11", features = ["string"]}
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
