[package]
name = "foxmarks"
version = "2.0.2"
authors = ["zefr0x"]
edition = "2021"
description = "A CLI read-only interface for firefox's bookmarks and history."
readme = "README.md"
homepage = "https://github.com/zefr0x/foxmarks"
repository = "https://github.com/zefr0x/foxmarks.git"
license = "GPL-3.0"
keywords = ["firefox", "bookmarks", "history", "cli"]
categories = ["command-line-utilities", "database-implementations"]
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.4.8", features = ["string"]}
configparser = "3.0.3"
dirs = "5.0.1"
rusqlite = "0.30.0"
tempfile = "3.8.1"

[build-dependencies]
clap = { version = "4.4.8", features = ["string"]}
clap_complete = "4.4.4"
clap_mangen = "0.2.15"

[features]
default = [ "libsqlite_bundled" ]
libsqlite_bundled = [ "rusqlite/bundled" ]
