[package]
name = "foxmarks"
version = "2.1.0"
authors = ["zefr0x"]
edition = "2024"
description = "A CLI read-only interface for firefox's bookmarks and history."
readme = "README.md"
homepage = "https://github.com/zefr0x/foxmarks"
repository = "https://github.com/zefr0x/foxmarks.git"
license = "GPL-3.0"
keywords = ["firefox", "bookmarks", "history", "cli"]
categories = ["command-line-utilities", "database-implementations"]

[dependencies]
clap = { version = "4.5.31", features = ["string"]}
configparser = "3.1.0"
dirs = "6.0.0"
rusqlite = "0.33.0"
tempfile = "3.17.1"

[build-dependencies]
clap = { version = "4.5.31", features = ["string"]}
clap_complete = "4.5.46"
clap_mangen = "0.2.26"

[features]
default = [ "libsqlite_bundled" ]
libsqlite_bundled = [ "rusqlite/bundled" ]

[profile.release]
lto = true
codegen-units = 1

# TODO: Consider commented lints when they are stable.
[lints.rust]
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "warn"
# fuzzy_provenance_casts = "warn"
# lossy_provenance_casts = "warn"
# multiple_supertrait_upcastable = "warn"
# must_not_suspend = "warn"
non_ascii_idents = "forbid"
# non_exhaustive_omitted_patterns = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unsafe_code = "forbid"
# unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "deny"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
filetype_is_file = "warn"
float_cmp_const = "deny"
format_push_string = "warn"
get_unwrap = "warn"
infinite_loop = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
# multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "warn"
pattern_type_mismatch = "warn"
pub_with_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "warn"
self_named_module_files = "deny"
semicolon_inside_block = "warn"
single_char_lifetime_names = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "forbid"
